fix side panel z-index

--- a/components/SidePanel.module.css
+++ b/components/SidePanel.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  z-index: 12;
+  z-index: 25;
 
   display: none;
 }
